[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "torch-kfac"
version = "0.1.0"
description = "KFAC implementation in Pytorch"
authors = [
    "Jan Hermann <jan.hermann@fu-berlin.de>",
]
packages = [
    { include = "torch_kfac", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.1"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = "^2"
black = ">=19-beta.0"
pep8-naming = ">=0.7"
isort = "^4.3"
pycodestyle = { git = "https://github.com/PyCQA/pycodestyle.git" }

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
